// Licensed to the Apache Software Foundation (ASF) under one
// or more contributor license agreements.  See the NOTICE file
// distributed with this work for additional information
// regarding copyright ownership.  The ASF licenses this file
// to you under the Apache License, Version 2.0 (the
// "License"); you may not use this file except in compliance
// with the License.  You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing,
// software distributed under the License is distributed on an
// "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
// KIND, either express or implied.  See the License for the
// specific language governing permissions and limitations
// under the License.

syntax = "proto3";

package edu.uci.ics.amber.core;

import "scalapb/scalapb.proto";

option (scalapb.options) = {
  scope: FILE,
  preserve_unknown_fields: false
  no_default_values_in_constructor: true
};

message WorkflowIdentity {
  int64 id = 1;
}

message ExecutionIdentity {
  int64 id = 1;
}

message ActorVirtualIdentity {
  string name = 1;
}

message ChannelIdentity {
  ActorVirtualIdentity fromWorkerId = 1 [(scalapb.field).no_box = true];
  ActorVirtualIdentity toWorkerId = 2 [(scalapb.field).no_box = true];
  bool isControl = 3;
}

message OperatorIdentity {
  string id = 1;
}

message PhysicalOpIdentity{
  OperatorIdentity logicalOpId = 1 [(scalapb.field).no_box = true];
  string layerName = 2;
}

message EmbeddedControlMessageIdentity{
  string id = 1;
}



